packages/wasm-guest/tests/macro_error/runtime_parameters.stderr
error: `workflow` functions should have no runtime parameters
 --> tests/macro_error/runtime_parameters.rs:4:18
  |
4 | async fn counter(x: usize) {}
  |                  ^^^^^^^^
