packages/wasm-guest/tests/macro_error/runtime_parameters.rs
use serpent_automation_wasm_guest::workflow;

#[workflow]
async fn counter(x: usize) {}

fn main() {}
